# SNop

./: .gitignore  pyproject.toml
src/snop/: __main__.py
src/snop/core/: gen_ds.py
src/snop/data/: frbparams.txt
src/snop/utils/: globalpars.py
