[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snop"
version = "0.1.0"
description = "A package to optimise FRB S/N from X Y pol data."
authors = [{ name = "Joel Balzan", email = "jbalzan.astro@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["FRB", "signal-to-noise", "optimise"]


[project.urls]
Homepage = "https://github.com/JoelBalzan/SNop"

[project.scripts]
snop = "snop.__main__:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"snop.data" = ["*.toml", "*.txt"]